sandbox/output
GildedRoseTest.java:24: error: method testQualityDegradeTwice() is already defined in class GildedRoseTest
    public void testQualityDegradeTwice() {
                ^
1 error
